--- a/index.html
+++ b/index.html
@@ -27,7 +27,21 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Inicio</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="nosotros.html">Nosotros</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Servicios</a></li>
+                        <li class="nav-item mx-0 mx-lg-1 nav-item dropdown"><a class="nav-link  py-3 px-0 px-lg-3 rounded" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Servicios</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="servicios.html#instrumentos">Calibración de instrumentos para pesar</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="servicios.html#pesas">CALIBRACIÓN DE PESAS</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="servicios.html#fuerza">Calibración en Fuerza</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="servicios.html#presion">Calibración en Presión</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="servicios.html#temperatura">Calibración en Temperatura</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="servicios.html#mantenimiento">SERVICIO DE MANTENIMIENTO</a>
+                            </div>
+                        </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="productos.html">Productos</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="contacto.html">Contacto</a></li>
                     </ul>
@@ -243,7 +257,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4 text-secondary">Información</h4>
                         <a href="nosotros.html"><i class="fas fa-users"></i>Nosotros</a><br><br>
-                        <a href=""> <i class="fas fa-tools"></i>Servicios</a><br><br>
+                        <a href="servicios.html"> <i class="fas fa-tools"></i>Servicios</a><br><br>
                         <a href="productos.html"> <i class="fas fa-cash-register"></i>Productos</a> 
                     </div>
                     <!-- Footer Atencion a clientes-->
