--- a/contacto.html
+++ b/contacto.html
@@ -60,17 +60,16 @@
                 <h2 class="page-section-heading text-center text-secondary text-uppercase mb-0">Contacto</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <img src="assets/img/contacto.gif" width="6%" alt="">
-                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-line2"></div>
+                    <img src="assets/img/contacto.gif" width="60rem" alt="">
+                    <div class="divider-custom-line2"></div>
                 </div>
                 <br>
 
                 <!-- Contact Section Content-->
-                <div class="row ">
-                    
+                <div class="row justify-content-center">
                     <h4 class="text-secondary"><b>LOCALÍZANOS EN</b></h4><br><br>
-                    <div class="col-lg-5 ms-auto colContact">
+                    <div class="col-lg-5 mb-5 colContact">
                         <p class="lead">
                             <h6>Oficinas generales:</h6><br>
                             <div class="textContact">
@@ -86,7 +85,7 @@
                         </p>
                     </div>
 
-                    <div class="col-lg-5 me-auto colContact">
+                    <div class="col-lg-5 mb-5 colContact">
                         <p class="lead">
                             <h6>Sucursal 1:</h6><br>
                             <div class="textContact">
