--- a/servicios.html
+++ b/servicios.html
@@ -59,77 +59,208 @@
                 <!-- Calibración de instrumentos Section Heading-->
                 <h2 class="page-section-heading2 text-center text-uppercase mb-0 text-secondary">Calibración de instrumentos para pesar</h2><br>
 
-                <p class="mb-0">Contamos con servicios de calibración en masa acreditados ante <b>EMA</b> desde microbalanzas de 5g hasta básculas camioneras con alcance de 80 toneladas.</p><br>
 
                 <!-- Instrumentos Grid Items-->
                 <div class="row justify-content-center">
-                    <div class="col-lg-4">
-                        <a class="portfolio-item" href="#!">
+                    <div class="col-lg-4 d-flex justify-content-center" >
+                        <div class="portfolio-item3">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <p class="mb-0">Contamos con métodos y procedimientos especiales 
-                                        calibrar instrumentos de mediano y alto alcance; celdas 
-                                        de carga, silos y tolvas.</p>
+                                    <p class="mb-0">Contamos con servicios de calibración en masa acreditados ante <b>EMA</b> desde microbalanzas de 5g hasta básculas camioneras con alcance de 80 toneladas.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/servicios/instrumento1.PNG" alt="..." />
-                        </a>
+                            <img class="img-fluid" src="assets/img/servicios/instrumento1.jpg" alt="..." />
+                        </div>
                     </div>
-                    <div class="col-lg-4">
-                        <a class="portfolio-item" href="#!">
+                    <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="portfolio-item2 d-none d-lg-block">
+                            <img class="img-fluid" src="assets/img/servicios/instrumento2.jpg" alt="..." />
+                        </div>
+                    </div>
+                    <div class="w-100"></div><br>
+                    <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="portfolio-item2 d-none d-lg-block">
+                            <img class="img-fluid" src="assets/img/servicios/instrumento3.PNG" alt="..." />
+                        </div>
+                    </div>
+                    <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="portfolio-item3">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <p class="mb-0">Contamos con servicios de 
-                                        calibración y ajuste juegos 
-                                        de pesas en las Clases E2, 
-                                        F1, F2, M1, M2 y M</p>
+                                    <p class="mb-0">Contamos con métodos y procedimientos especiales calibrar instrumentos de mediano y alto alcance; celdas de carga, silos y tolvas.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/servicios/instrumento2.png" alt="..." />
-                        </a>
+                            <img class="img-fluid" src="assets/img/servicios/instrumento4.png" alt="..." />
+                        </div>
                     </div>
                 </div>
 
             </div>
         </section>
 
-        <!-- Calibración de instrumentos Section-->
-        <section class="masthead2 page-section portfolio text-center" id="instrumentos">
+        <!-- Calibración de pesas Section-->
+        <section class="page-section portfolio text-center" id="pesas">
             <div class="container">
-                <!-- Calibración de instrumentos Section Heading-->
-                <h2 class="page-section-heading2 text-center text-uppercase mb-0 text-secondary">Calibración de instrumentos para pesar</h2><br>
+                <!-- Calibración de pesas Section Heading-->
+                <h2 class="page-section-heading2 text-center text-uppercase mb-0 text-secondary">Calibración de pesas</h2><br>
 
-                <p class="mb-0">Contamos con servicios de calibración en masa acreditados ante <b>EMA</b> desde microbalanzas de 5g hasta básculas camioneras con alcance de 80 toneladas.</p><br>
-
-                <!-- Instrumentos Grid Items-->
+                <!-- pesas Grid Items-->
                 <div class="row justify-content-center">
-                    <div class="col-lg-4">
-                        <a class="portfolio-item" href="#!">
+                    <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="pesas-item">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <p class="mb-0">Contamos con métodos y procedimientos especiales 
-                                        calibrar instrumentos de mediano y alto alcance; celdas 
-                                        de carga, silos y tolvas.</p>
+                                    <p class="textServicios mb-0">Contamos con servicios de calibración y ajuste juegos de pesas en las clases E2, F1, F2, M1, M2 y M3.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/servicios/instrumento1.PNG" alt="..." />
-                        </a>
+                            <img class="img-fluid" src="assets/img/servicios/pesas1.png" alt="..." />
+                        </div>
                     </div>
-                    <div class="col-lg-4">
-                        <a class="portfolio-item" href="#!">
+                    <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="pesas-item">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <p class="mb-0">Contamos con servicios de 
-                                        calibración y ajuste juegos 
-                                        de pesas en las Clases E2, 
-                                        F1, F2, M1, M2 y M</p>
+                                    <p class="mb-0">Brindamos el servicio de calibración de pesas paralelepipedas de 5 kg, 10 kg, 20 kg y 500 kg en clases M1, M2 y M3.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/servicios/instrumento2.png" alt="..." />
-                        </a>
+                            <img class="img-fluid" src="assets/img/servicios/pesas2.png" alt="..." />
+                        </div>
                     </div>
                 </div>
 
+            </div>
+        </section>
+
+        <!-- Calibración en fuerza Section-->
+        <section class="page-section portfolio text-center" id="fuerza">
+            <div class="container">
+                <!-- Calibración en fuerza Section Heading-->
+                <h2 class="page-section-heading2 text-center text-uppercase mb-0 text-secondary">Calibración en fuerza</h2><br>
+
+                <!-- fuerza Grid Items-->
+                <div class="row justify-content-center">
+
+                    <div class="col-lg-3 d-flex justify-content-center">
+                        <div class="portfolio-item2 d-none d-lg-block">
+                            <img class="img-fluid" src="assets/img/servicios/fuerza1.jpg" alt="..." />
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 d-flex justify-content-center">
+                        <div class="fuerza-item">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <p class="mb-0">Contamos con el servicio de calibración a prensas en uno y dos intervalos, con acreditamiento ante EMA. <br> Nuestros métodos y procedimientos aseguran el buen funcionamiento del instrumento.</p>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/servicios/fuerza3.png" alt="..." />
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 d-flex justify-content-center">
+                        <div class="portfolio-item2 d-none d-lg-block">
+                            <img class="img-fluid" src="assets/img/servicios/fuerza2.jpg" alt="..." />
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+        <!-- Calibración en presion Section-->
+        <section class="page-section portfolio text-center" id="presion">
+            <div class="container">
+                <!-- Calibración en presion Section Heading-->
+                <h2 class="page-section-heading2 text-center text-uppercase mb-0 text-secondary">Calibración en presión</h2><br>
+
+                <!-- presion Grid Items-->
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 d-flex justify-content-center">
+                        <div class="presion-item">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <p class="mb-0">Contamos con servicio de calibración a manómetros análogos y digitales, así como a Vacuometros,Válvulas de Seguridad, Transmisores de Presión, etc. <br> Con acreditamiento ante EMA.</p>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/servicios/presion.png" alt="..." />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Calibración en temperatura Section-->
+        <section class="page-section portfolio text-center" id="temperatura">
+            <div class="container">
+                <!-- Calibración en temperatura Section Heading-->
+                <h2 class="page-section-heading2 text-center text-uppercase mb-0 text-secondary">Calibración en temperatura</h2><br>
+
+                <!-- temperatura Grid Items-->
+                <div class="row justify-content-center" >
+
+                    <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="temperatura-item" >
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <p class="mb-0">Contamos con servicio de calibración a Termómetros de líquido en vidrio, Termómetros digitales, Termómetros Bimetálicos, Termómetros con infrarrojo, Sensores de temperatura, Termopares, Estufas y Muflas.</p>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/servicios/temperatura5.png" alt="..." />
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 d-flex justify-content-center align-items-center">
+
+                        <div class="row">
+                            <div class="col-lg-6 ">
+                                <div class="portfolio-item2 d-none d-lg-block">
+                                    <img class="img-fluid" src="assets/img/servicios/temperatura1.jpg" alt="..." />
+                                </div>
+                            </div>
+    
+                            <div class="col-lg-6">
+                                <div class="portfolio-item2 d-none d-lg-block">
+                                    <img class="img-fluid" src="assets/img/servicios/temperatura2.png" alt="..." />
+                                </div>
+                            </div>
+                            <div class="w-100"></div><br>
+                            <div class="col-lg-6">
+                                <div class="portfolio-item2 d-none d-lg-block">
+                                    <img class="img-fluid" src="assets/img/servicios/temperatura3.png" alt="..." />
+                                </div>
+                            </div>
+    
+                            <div class="col-lg-6">
+                                <div class="portfolio-item2 d-none d-lg-block">
+                                    <img class="img-fluid" src="assets/img/servicios/temperatura4.png" alt="..." />
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Servicio de mantenimiento Section-->
+        <section class="page-section portfolio text-center" id="mantenimiento">
+            <div class="container">
+                <!-- Servicio de mantenimiento Section Heading-->
+                <h2 class="page-section-heading2 text-center text-uppercase mb-0 text-secondary">Servicio de mantenimiento</h2><br>
+
+                <!-- mantenimiento Grid Items-->
+                <div class="row justify-content-center">
+                    <div class="col-lg-9 d-flex justify-content-center">
+                        <div class="mantenimiento-item">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <p class="mb-0">Contamos con personal calificado para realizar servicios preventivos y correctivos a básculas y balanzas mecánicas o electrónicas de las más reconocidas marcas del mercado.</p>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/servicios/mantenimiento.png" alt="..." />
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
