--- a/productos.html
+++ b/productos.html
@@ -58,9 +58,17 @@
             <div class="container">
                 <!-- Portfolio Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Nuestros productos</h2>
-                <br><br>             
+                
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <img src="assets/img/herramienta.gif" width="70rem" alt="">
+                    <div class="divider-custom-line"></div>
+                </div>
+
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
+
                     <!-- Portfolio Item 1-->
                     <div class="col-md-6 col-lg-4 mb-5">
                         <div class="portfolio-item mx-auto">
