Modificacion en secccion productos

--- a/servicios.html
+++ b/servicios.html
@@ -257,7 +257,7 @@
                                     <p class="mb-0">Contamos con personal calificado para realizar servicios preventivos y correctivos a básculas y balanzas mecánicas o electrónicas de las más reconocidas marcas del mercado.</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/servicios/mantenimiento.png" alt="..." />
+                            <img class="img-fluid" src="assets/img/servicios/mantenimiento.png" style="height: 35rem;" alt="..." />
                         </div>
                     </div>
                 </div>
