Modificacion seccion servicios

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="servicios.html#temperatura">Calibración en Temperatura</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="servicios.html#mantenimiento">SERVICIO DE MANTENIMIENTO</a>
+                                <a class="dropdown-item" href="servicios.html#mantenimiento">MANTENIMIENTO</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="servicios.html#verificacion">Verificación de básculas</a>
                             </div>
                         </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="productos.html">Productos</a></li>
