--- a/servicios.html
+++ b/servicios.html
@@ -41,8 +41,9 @@
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="servicios.html#temperatura">Calibración en Temperatura</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="servicios.html#mantenimiento">SERVICIO DE MANTENIMIENTO</a>
-                              
+                                <a class="dropdown-item" href="servicios.html#mantenimiento">MANTENIMIENTO</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="servicios.html#verificacion">Verificación de básculas</a>
                             </div>
                         </li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="productos.html">Productos</a></li>
@@ -242,11 +243,11 @@
             </div>
         </section>
 
-        <!-- Servicio de mantenimiento Section-->
+        <!-- Mantenimiento Section-->
         <section class="page-section portfolio text-center" id="mantenimiento">
             <div class="container">
-                <!-- Servicio de mantenimiento Section Heading-->
-                <h2 class="page-section-heading2 text-center text-uppercase mb-0 text-secondary">Servicio de mantenimiento</h2><br>
+                <!-- Mantenimiento Section Heading-->
+                <h2 class="page-section-heading2 text-center text-uppercase mb-0 text-secondary">Mantenimiento</h2><br>
 
                 <!-- mantenimiento Grid Items-->
                 <div class="row justify-content-center">
@@ -261,6 +262,40 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- Verificacion de basculas Section-->
+        <section class="page-section portfolio text-center" id="verificacion">
+            <div class="container">
+                <!-- Verificacion de basculas Section Heading-->
+                <h2 class="page-section-heading2 text-center text-uppercase mb-0 text-secondary">Verificacion de básculas</h2><br>
+
+                <!-- verificacion Grid Items-->
+                <div class="row justify-content-center">
+                    <div class="col-lg-4 d-flex justify-content-center" >
+                        <div class="verificacion-item">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <p class="mb-0">Ofrecemos servicio de verificación a básculas en bajo, mediano y alto alcance utilizadas para transacción comercial. <br><br> La unidad esta acreditada ante PROFECO .</p>
+                                </div>
+                            </div>
+                            <img class="img-fluid" src="assets/img/servicios/verificacion1.jpg" alt="..." />
+                        </div>
+                    </div>
+                    <div class="w-100"></div><br>
+                    <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="portfolio-item2 d-none d-lg-block">
+                            <img class="img-fluid" src="assets/img/servicios/verificacion2.jpg" alt="..." />
+                        </div>
+                    </div>
+                    <div class="col-lg-4 d-flex justify-content-center">
+                        <div class="portfolio-item2 d-none d-lg-block">
+                            <img class="img-fluid" src="assets/img/servicios/verificacion3.png" alt="..." />
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
