--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Inicio</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="nosotros.html">Nosotros</a></li>
                         <li class="nav-item mx-0 mx-lg-1 nav-item dropdown"><a class="nav-link  py-3 px-0 px-lg-3 rounded" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Servicios</a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown"> 
+                                <a class="dropdown-item" href="servicios.html#tolvas">Calibración de sistemas de pesaje en Tolvas</a>
+                                <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="servicios.html#instrumentos">Calibración de instrumentos para pesar</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="servicios.html#pesas">CALIBRACIÓN DE PESAS</a>
@@ -93,7 +95,6 @@
                 </div>
 
                 <p class="masthead-subheading mb-0">Contamos con unidades de verficación acreditadas por <b>EMA</b> y aprobadas por <b>PROFECO</b>.</p>
-                <p class="masthead-subheading mb-0" style="margin-top: 8px;">Al igual que contamos con nuestro <b>Acreditamiento M-81</b> que nos faculta para calibrar tolvas y plataformas hasta un alcance de: 80 Ton.</p>
 
                 <!-- Portfolio Grid Items-->
                 <div class="row justify-content-center">
