--- a/productos.html
+++ b/productos.html
@@ -30,6 +30,8 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="nosotros.html">Nosotros</a></li>
                         <li class="nav-item mx-0 mx-lg-1 nav-item dropdown"><a class="nav-link  py-3 px-0 px-lg-3 rounded" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Servicios</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="servicios.html#tolvas">Calibración de sistemas de pesaje en Tolvas</a>
+                                <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="servicios.html#instrumentos">Calibración de instrumentos para pesar</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="servicios.html#pesas">CALIBRACIÓN DE PESAS</a>
@@ -71,21 +73,9 @@
                 <!-- Productos Grid Items-->
                 <div class="row justify-content-center">
 
-                    <!-- Productos Item 1
-                    <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
-                            <div class="card cardintroProduct">
-                                <div class="card-body introProduct">
-                                  <h6 class="text-center text-uppercase mb-0 text-white">Vendemos gran variedad de basculas y balanzas de laboratorio, comerciales e industriales. <br><br> Además ofrecemos la instalación y diseños, para aplicaciones especiales.</h6>
-                                </div>
-                                <img class="card-img-top2" src="assets/img/portfolio/instalacion.PNG" alt="Card image cap">
-                            </div>
-                        </div>
-                    </div>-->
-
                     <!-- Productos Item 1 -->
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal4">
+                        <div class="portfolio-item mx-auto">
                             <div class="card cardintroProduct">
                                 <div class="producto-item">
                                     <div class="caption">
