--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         </section>
 
         <!-- Otros productos y costos Section-->
-        <section class="portfolio text-center">
+        <section class="page-section2 portfolio text-center">
             <div class="container">
                 <!-- otros productos y costos Grid Items-->
                 <div class="row justify-content-center">
@@ -273,11 +273,11 @@
                                     <li><p class="masthead-subheading mb-0">Trabajamos para una amplia gama de concreteras en México.</p></li>
                                 </ul>
 
-                                <small class="d-flex justify-content-end align-items-end">
-                                    <div>
+                                <div class="d-flex align-items-end justify-content-end">
+                                    <small>
                                         <b>Nota:</b><span style="margin-left: 5px;">Nuestro equipo patrón esta calibrado con trazabilidad hacia el CENAM.</span>
-                                    </div>
-                                </small>
+                                    </small>
+                                </div>
                                 
                             </div>
                             
