Mas y mas modificaciones

--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
                 <br>
                 <!-- About Section Content-->
                 <div class="row text-center">
-                    <p class="lead">Contamos con métodos y procedimientos especiales calibrar instrumentos de mediano y alto alcance; celdas de carga, silos y tolvas.</p>
-                    <p class="lead">Al igual que con servicios de calibración y ajuste juegos de pesas en las Clases E2,F1, F2, M1, M2 y M3.</p>
+                    <p class="lead">Ofrecemos servicios integrales de calibración de instrumentos en magnitudes como: 
+                    </p>
+                    <p class="lead">Masa, Temperatura, Presion, Fuerza, Volumen, Flujo y Dimensional</p>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
@@ -228,8 +229,8 @@
                             <h2 class="page-section-heading2 text-center mb-0 text-secondary">Otros productos y servicios</h2><br>
 
                             <div class="row justify-content-center align-items-center">
-                                <div class="row justify-content-center align-items-center">
-                                    <div class="col" >
+                                <div class="row justify-content-center align-items-center" >
+                                    <div class="col">
                                         <img src="assets/img/otros1.PNG" style="width: 15rem;" alt="">
                                     </div>
                                     <div class="col textOtros">
@@ -261,7 +262,7 @@
                         </div>
                     </div>
                     <!-- costos Item-->
-                    <div class="col-lg-6 mb-5"  style="padding-left: 4rem; padding-right: 4rem;">
+                    <div class="col-lg-6 mb-5">
                         <div class="mx-auto">
                             <h2 class="page-section-heading2 text-center mb-0 text-secondary">Costos</h2><br>
                             <div class="row justify-content-center text-white costosContainer">
