--- a/nosotros.html
+++ b/nosotros.html
@@ -69,10 +69,10 @@
                 </div>
                 
                 <!-- Portfolio Grid Items-->
-                <div class="row justify-content-center align-items-start">
-                    <div class="col-md-6 col-lg-5 mb-5 d-none d-lg-block imgNosotros">
+                <div class="row justify-content-center align-items-center">
+                    <div class="col-md-6 col-lg-2 mb-5 d-none d-lg-block imgNosotros">
                     </div>
-                    <div class="col-md-6 col-lg-5 mb-5">
+                    <div class="col-md-6 col-lg-6 mb-5 textNosotros">
                       <strong>25 años de experiencia</strong><br><br>
                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus perspiciatis corporis inventore expedita, ipsam quis in? Odio iure voluptas officiis molestiae cumque nisi, quibusdam quae ipsum voluptatibus sint laborum libero!
                       Necessitatibus illo recusandae fugit mollitia, dolores saepe natus quibusdam a at officia itaque debitis nobis? Ratione vel perferendis facere aperiam odio corporis quisquam illum, debitis a quidem, non maxime at.
