--- a/contacto.html
+++ b/contacto.html
@@ -56,7 +56,7 @@
         </nav>
 
         <!-- Contacto Section-->
-        <section class="masthead2 page-section portfolio text-center">
+        <section class="masthead2 page-section portfolio text-center mb-5">
             <div class="container contContacto">
                 <!-- Contacto Section Heading-->
                 
@@ -116,7 +116,7 @@
                     </div>
                 </div>
 
-            </div><br>
+            </div>
         </section>
 
         
